--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <title>Ryoji_Protfolio</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="stylesheet" href="stylesheet_smartphone.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
             <div class="container">
                 <div class="header-right">
-                    <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/Boat%20x%20art.JPG" class="header-logo">
+                    <img src="image/Boat x art.JPG" class="header-logo">
                     <p>RyOJ!</p>
                 </div>
                 <div class="header-left">
@@ -26,19 +27,19 @@
         <div class="top-wrapper">
             <div class="container">
                 <h1 class="title">Portfolio</h1>
-                <p>過去の作品のまとめ</p>
+                <p> - 過去の作品のまとめ - </p>
             </div>
         </div>
         <div class="main-wrapper">
             <div class="container">
-                <div class="works">
-                    <div class="work work1">
+                <div class="work1">
+                    <div class="work">
                         <h2 class="work-title">漕艇部試乗会の告知用ビラ</h2>
                         <p>試乗会は直接ボートを漕げる体験イベントであり、漕艇部の新歓で1番ボート競技の魅力を伝えられるイベントです。試乗会の参加をきっかけにボートの楽しさを実感し入部の決断する新入生が多く、試乗会の参加が新歓の成功の鍵となります。新歓活動がコロナ禍により、対面での勧誘からSNS媒体での勧誘がメインとなりました。SNSのタイムラインで流れた時に目立つこと、ボートを知らない人も直感的にかっこよさを感じてもらえるビラを作成しました。彩度の高い色と、コピーを強調することでSNS上での誘目効果を狙っています。
                         <br><br>(企画/制作を担当、使用ソフト:Photoshop、制作時間:9hours)</p>
                         <img src="image/試乗会のビラ.jpg" class="work-img">
                     </div>
-                    <div class="work work2">
+                    <div class="work">
                         <h2 class="work-title">受験「ありがとう」ポスター</h2>
                         <p>コロナ禍で頑張る受験生に対して部活への勧誘の前に「受験お疲れ様」の気持ちを伝えられないかという思いから企画がスタートしました。ボートらしくお疲れ様を伝えるアイデアとしてボート用語の「ありがとう」を使いました。キャッチコピーの言葉以外にも、構図や使う色、フォントに至るまで色々な要素に意味を込めて作成しました。２次試験の時期に、東京メトロ東大前駅に１ヶ月ほど掲示していただきました。また、SNS上でも公開し多くの反響をいただけた作品です。
                         <br><br>(企画/制作を担当、使用ソフト:Photoshop,Illustrator、制作時間:3weeks)</p>
@@ -49,59 +50,60 @@
                             <img src="image/駅ポスターNo.3_アートボード 1.jpg" class="work-img">
                             <img src="image/現地の掲示3.JPG" class="work-img">
                         </div>
-                        <div class="clear"></div>
                     </div>
-                    <div class="work work3">
+                </div>
+                <div class="work2">
+                    <div class="work">
                         <h2 class="work-title">ノアロンえんぴつ</h2>
                         <p>家庭教師ノアロンは中学受験に取り組んでいる親子のサポートをする家庭教師です。受験に対する理解や意見の食い違いによりバラバラになってしまう家族の足並みをそろえることで合格に繋げたいというノアロンの思いを鉛筆の形で見えやすくすることを目指しました。親と子が同じ１本の鉛筆を使うことで、受験に向かう気持ちが減った長さで認識できるようになっています。実際には製品化はしておらず、紙に印刷したものを市販の鉛筆に巻き付けて制作しています。
                         <br><br>(企画/制作を担当、使用ソフト:Illustrator、制作時間:2hours)</p>
                         <img src="image/ノアロン鉛筆.jpg" class="work-img ">
                         <img src="image/ノアロン鉛筆.png" class="work-img">
                     </div>
-                    <div class="work work4">
-                        <h2 class="work-title">KAZA-GURUMA</h2>
-                        <p>学内祭の五月祭で研究室の企画として設計したパビリオン作品です。毎年コンペを行い選ばれた２作品を実際に展示物として製作しており、KAZA-GURUMAは2021年の2等作品として選ばれました。24mmの厚物構造用合板を組み合わせてドーム状にした作品であり、３Dモデルを作成して材料の加工角度を算出して1つずつ手作業で加工を行なっています。五月祭の開催後には、表参道のギャラリーに移設展示をしました。五月祭はオンライン開催のため、制作の様子を動画にまとめて公開しました。
-                        <br><br>(設計/動画編集を担当、使用ソフト: Fusion360、PremirePro)<span> <a href="https://youtu.be/DknEBx1oN4w" class="movie">パビリオン制作動画</a></span></p>
+                    <div class="work">
+                        <h2 class="work-title">KAZA-GURUMA<span> <a href="https://youtu.be/DknEBx1oN4w" class="movie">制作動画</a></span></h2>
+                        <p>学内祭の五月祭で研究室の企画として設計したパビリオン作品です。毎年コンペを行い選ばれた２作品を実際に展示物として製作しており、KAZA-GURUMAは2021年の2等作品として選ばれました。24mmの厚物構造用合板を組み合わせてドーム状にした作品であり、３Dモデルを作成して材料の加工角度を算出して1つずつ手作業で加工を行なっています。五月祭の開催後には、表参道のギャラリーに移設展示をしました。オンライン公表向けに制作の様子を動画にまとめて公開しました。
+                        <br><br>(設計/動画編集を担当、使用ソフト: Fusion360、PremirePro)</p>
                         <img src="image/パビリオン正面.jpeg" class="work-img pavilion1">
                         <img src="image/30度.jpg" class="work-img pavilion2">
                     </div>
-                    <div class="work work5">
+                </div>
+                <div class="work3">
+                    <div class="work">
                         <h2 class="work-title">受験応援ウェットティッシュ・カイロ</h2>
-                        <p>東大受験をする高校生に応援メッセージを届けるためのグッズとして2021年にカイロ、2022年にウェットティッシュを作成しました。受験の困難を荒波の中で漕ぐボートに重ねることで応援メッセージとしました。2021年のウェットティッシュでは、漕ぐ先に東大の安田講堂を描くことで東大合格に向けて努力を重ねるストーリーを込めました。
+                        <p>東大受験をする母校の高校生に応援メッセージを届けるためのグッズを届けました。2021年にカイロ、2022年にウェットティッシュを作成しました。受験の困難を荒波の中で漕ぐボートに重ねることで応援メッセージとしました。2021年のウェットティッシュでは、漕ぐ先に東大の安田講堂を描くことで東大合格に向けて努力を重ねるストーリーを込めました。
                         <br><br><br>(イラスト制作を担当、使用ソフト: Photoshop)</p>
                         <img src="image/boat２.png" class="work-img">
                         <img src="image/カイロ.JPG" class="work-img kairo">
                     </div>
-                    <div class="work work6">
+                    <div class="work">
                         <h2 class="work-title">その他のチラシ</h2>
                         <p>漕艇部の新歓では、色々なイベントを行なっています。各イベントごとに告知をしており、イベントに合わせてチラシやSNS投稿用の画像を作成しました。ボートというマイナーなスポーツ故に競技中の写真を使うだけでは、動きや動作は伝わりづらいと感じ、紙面や色の見栄えの印象をプラスして魅力的に見せることが必要だと感じています。写真がいっぱいのチラシは、部の魅力の1つである部員の良さを伝える意図で作りました。
                         <br><br>(企画/制作を担当、使用ソフト: Photoshop、制作時間：5~6hours)</p>
                         <img src="image/チラシ桜.png" class="work-img">
                         <img src="image/３部合同説明会.png" class="work-img">
                     </div>
-                    <div class="work work7">
+                </div>
+                <div class="work4">
+                    <div class="work">
                         <h2 class="work-title">文字のグラフィック「漕」</h2>
                         <p>「漕」の文字を図形を図形でおしゃれに表すことを目指した。青の丸は水飛沫をイメージ、白のラインはボートのスピードと風を切って進むイメージ、赤はオールを引く時のパワーの込め方、黄色はボートそのものをイメージしている。
                         <br><br>(使用ソフト: keynote、制作時間：2hours)</p>
-                        <img src="image/漕　アート.001.JPEG" class="work-img">
+                        <img src="image/漕　アート.001.JPEG" class="work-img work7-img">
                     </div>
-                    <div class="work work8">
+                    <div class="work">
                         <h2 class="work-title">ボートのロゴデザイン</h2>
                         <p>ボートのオールはちゃんと漕げるようになるとしなる。Be Bending During Stroke. という謎の言葉が同期の間で叫ばれるようになった頃に、合言葉を表すロゴとして作成しました。UTRCはUniversity of Tokyo Rowing Clubの略称です。
                         <br><br>(使用ソフト: Illustratar、制作時間：1day)</p>
-                        <img src="image/boat-logo.jpg" class="work-img">
+                        <img src="image/boat-logo.jpg" class="work-img work8-img">
                     </div>
-
                 </div>
-
+                <div class="clear"></div>
             </div>
         </div>
         <footer> 
             <div class="container">
                 <p>©️RyOJ!</p>
-               
-                <div class="header-left">
-                </div>
             </div>
         </footer>
     </body>
