--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <h2 class="work-title">漕艇部試乗会の告知用ビラ</h2>
                         <p>試乗会は直接ボートを漕げる体験イベントであり、漕艇部の新歓で1番ボート競技の魅力を伝えられるイベントです。試乗会の参加をきっかけにボートの楽しさを実感し入部の決断する新入生が多く、試乗会の参加が新歓の成功の鍵となります。新歓活動がコロナ禍により、対面での勧誘からSNS媒体での勧誘がメインとなりました。SNSのタイムラインで流れた時に目立つこと、ボートを知らない人も直感的にかっこよさを感じてもらえるビラを作成しました。彩度の高い色と、コピーを強調することでSNS上での誘目効果を狙っています。
                         <br><br>(企画/制作を担当、使用ソフト:Photoshop、制作時間:9hours)</p>
-                        <img src="image/試乗会のビラ.jpg" class="work-img">
+                        <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E8%A9%A6%E4%B9%97%E4%BC%9A%E3%81%AE%E3%83%92%E3%82%99%E3%83%A9.jpg" class="work-img">
                     </div>
                     <div class="work">
                         <h2 class="work-title">受験「ありがとう」ポスター</h2>
