--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p>コロナ禍で頑張る受験生に対して部活への勧誘の前に「受験お疲れ様」の気持ちを伝えられないかという思いから企画がスタートしました。ボートらしくお疲れ様を伝えるアイデアとしてボート用語の「ありがとう」を使いました。キャッチコピーの言葉以外にも、構図や使う色、フォントに至るまで色々な要素に意味を込めて作成しました。２次試験の時期に、東京メトロ東大前駅に１ヶ月ほど掲示していただきました。また、SNS上でも公開し多くの反響をいただけた作品です。
                         <br><br>(企画/制作を担当、使用ソフト:Photoshop,Illustrator、制作時間:3weeks)</p>
                         <div class="image-right">
-                            <img src="image/駅ポスター_アートボード 1.png" class="work-img">
+                            <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E9%A7%85%E3%83%9B%E3%82%9A%E3%82%B9%E3%82%BF%E3%83%BC_%E3%82%A2%E3%83%BC%E3%83%88%E3%83%9B%E3%82%99%E3%83%BC%E3%83%88%E3%82%99%201.png" class="work-img">
                         </div>
                         <div class="image-left">
                             <img src="image/駅ポスターNo.3_アートボード 1.jpg" class="work-img">
