--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="image-left">
                             <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E9%A7%85%E3%83%9B%E3%82%9A%E3%82%B9%E3%82%BF%E3%83%BCNo.3_%E3%82%A2%E3%83%BC%E3%83%88%E3%83%9B%E3%82%99%E3%83%BC%E3%83%88%E3%82%99%201.jpg" class="work-img">
-                            <img src="image/現地の掲示3.JPG" class="work-img">
+                            <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E7%8F%BE%E5%9C%B0%E3%81%AE%E6%8E%B2%E7%A4%BA3.JPG" class="work-img">
                         </div>
                     </div>
                 </div>
