--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p>家庭教師ノアロンは中学受験に取り組んでいる親子のサポートをする家庭教師です。受験に対する理解や意見の食い違いによりバラバラになってしまう家族の足並みをそろえることで合格に繋げたいというノアロンの思いを鉛筆の形で見えやすくすることを目指しました。親と子が同じ１本の鉛筆を使うことで、受験に向かう気持ちが減った長さで認識できるようになっています。実際には製品化はしておらず、紙に印刷したものを市販の鉛筆に巻き付けて制作しています。
                         <br><br>(企画/制作を担当、使用ソフト:Illustrator、制作時間:2hours)</p>
                         <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E3%83%8E%E3%82%A2%E3%83%AD%E3%83%B3%E9%89%9B%E7%AD%86.jpg" class="work-img ">
-                        <img src="image/ノアロン鉛筆.png" class="work-img">
+                        <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E3%83%8E%E3%82%A2%E3%83%AD%E3%83%B3%E9%89%9B%E7%AD%86.png" class="work-img">
                     </div>
                     <div class="work">
                         <h2 class="work-title">KAZA-GURUMA<span> <a href="https://youtu.be/DknEBx1oN4w" class="movie">制作動画</a></span></h2>
