--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <h2 class="work-title">KAZA-GURUMA<span> <a href="https://youtu.be/DknEBx1oN4w" class="movie">制作動画</a></span></h2>
                         <p>学内祭の五月祭で研究室の企画として設計したパビリオン作品です。毎年コンペを行い選ばれた２作品を実際に展示物として製作しており、KAZA-GURUMAは2021年の2等作品として選ばれました。24mmの厚物構造用合板を組み合わせてドーム状にした作品であり、３Dモデルを作成して材料の加工角度を算出して1つずつ手作業で加工を行なっています。五月祭の開催後には、表参道のギャラリーに移設展示をしました。オンライン公表向けに制作の様子を動画にまとめて公開しました。
                         <br><br>(設計/動画編集を担当、使用ソフト: Fusion360、PremirePro)</p>
-                        <img src="image/パビリオン正面.jpeg" class="work-img pavilion1">
+                        <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E3%83%8F%E3%82%9A%E3%83%92%E3%82%99%E3%83%AA%E3%82%AA%E3%83%B3%E6%AD%A3%E9%9D%A2.jpeg" class="work-img pavilion1">
                         <img src="image/30度.jpg" class="work-img pavilion2">
                     </div>
                 </div>
