--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p>東大受験をする母校の高校生に応援メッセージを届けるためのグッズを届けました。2021年にカイロ、2022年にウェットティッシュを作成しました。受験の困難を荒波の中で漕ぐボートに重ねることで応援メッセージとしました。2021年のウェットティッシュでは、漕ぐ先に東大の安田講堂を描くことで東大合格に向けて努力を重ねるストーリーを込めました。
                         <br><br><br>(イラスト制作を担当、使用ソフト: Photoshop)</p>
                         <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/boat%EF%BC%92.png" class="work-img">
-                        <img src="image/カイロ.JPG" class="work-img kairo">
+                        <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E3%82%AB%E3%82%A4%E3%83%AD.JPG" class="work-img kairo">
                     </div>
                     <div class="work">
                         <h2 class="work-title">その他のチラシ</h2>
