--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <h2 class="work-title">その他のチラシ</h2>
                         <p>漕艇部の新歓では、色々なイベントを行なっています。各イベントごとに告知をしており、イベントに合わせてチラシやSNS投稿用の画像を作成しました。ボートというマイナーなスポーツ故に競技中の写真を使うだけでは、動きや動作は伝わりづらいと感じ、紙面や色の見栄えの印象をプラスして魅力的に見せることが必要だと感じています。写真がいっぱいのチラシは、部の魅力の1つである部員の良さを伝える意図で作りました。
                         <br><br>(企画/制作を担当、使用ソフト: Photoshop、制作時間：5~6hours)</p>
-                        <img src="image/チラシ桜.png" class="work-img">
+                        <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E3%83%81%E3%83%A9%E3%82%B7%E6%A1%9C.png" class="work-img">
                         <img src="image/３部合同説明会.png" class="work-img">
                     </div>
                 </div>
