--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <h2 class="work-title">ボートのロゴデザイン</h2>
                         <p>ボートのオールはちゃんと漕げるようになるとしなる。Be Bending During Stroke. という謎の言葉が同期の間で叫ばれるようになった頃に、合言葉を表すロゴとして作成しました。UTRCはUniversity of Tokyo Rowing Clubの略称です。
                         <br><br>(使用ソフト: Illustratar、制作時間：1day)</p>
-                        <img src="image/boat-logo.jpg" class="work-img work8-img">
+                        <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/boat-logo.jpg" class="work-img work8-img">
                     </div>
                 </div>
                 <div class="clear"></div>
