--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <h2 class="work-title">文字のグラフィック「漕」</h2>
                         <p>「漕」の文字を図形を図形でおしゃれに表すことを目指した。青の丸は水飛沫をイメージ、白のラインはボートのスピードと風を切って進むイメージ、赤はオールを引く時のパワーの込め方、黄色はボートそのものをイメージしている。
                         <br><br>(使用ソフト: keynote、制作時間：2hours)</p>
-                        <img src="image/漕　アート.001.JPEG" class="work-img work7-img">
+                        <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/%E6%BC%95%E3%82%A2%E3%83%BC%E3%83%88.001.jpg" class="work-img work7-img">
                     </div>
                     <div class="work">
                         <h2 class="work-title">ボートのロゴデザイン</h2>
