--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="header-right">
-                    <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/Boat%20x%20art.JPG?" class="header-logo">
+                    <img src="https://github.com/Ryo0ji/ryo0ji.github.io/blob/main/Boat%20x%20art.JPG?raw=true" class="header-logo">
                     <p>RyOJ!</p>
                 </div>
                 <div class="header-left">
